# XdmfGenerator

./: CMakeLists.txt  Config.cmake.in  DockerTestFile  LICENSE  README.md  clangFormatter.cmake  main.cpp
.github/workflows/: Build.yml
interface/: generators.hpp
src/: CMakeLists.txt  generators.cpp  generators.hpp  hdfObject.cpp  hdfObject.hpp  library.hpp  object.cpp  object.hpp  xdmfBuilder.cpp  xdmfBuilder.hpp  xdmfSpecification.cpp  xdmfSpecification.hpp  xmlElement.cpp  xmlElement.hpp
tests/: CMakeLists.txt  integrationTests.cpp
tests/inputs/: flowField.0.hdf5  flowWithComponentNames.hdf5  flowWithMultipleComponents.hdf5  flowWithParticles.0.hdf5  meshWithExtrudedCells.hdf5  meshWithExtrudedCells.xmf  particleWithExtraFields.hdf5  particlesDynamic3D.hdf5  particlesOnly.0.hdf5  particlesWithComponentsNames.0.hdf5  singleFile.2DLine.0.hdf5  steadyStateMixedCells.hdf5  steadystate.0.hdf5  swarmStaticMesh.0.hdf5  transientMixedCells.hdf5
tests/inputs/multiFile.2DLine.0/: faceMonitor.00000.hdf5  faceMonitor.00001.hdf5
tests/inputs/multiFileFlowField.0/: domain.00000.hdf5  domain.00001.hdf5  domain.00002.hdf5  domain.00003.hdf5  domain.00004.hdf5  domain.00005.hdf5  domain.00006.hdf5  domain.00007.hdf5  domain.00008.hdf5  domain.00009.hdf5  domain.00010.hdf5  domain.00011.hdf5  domain.00012.hdf5  domain.00013.hdf5  domain.00014.hdf5  domain.00015.hdf5
tests/inputs/multiFileParticles.0/: flowTracerParticles.00000.hdf5  flowTracerParticles.00001.hdf5  flowTracerParticles.00002.hdf5  flowTracerParticles.00003.hdf5  flowTracerParticles.00004.hdf5  flowTracerParticles.00005.hdf5  flowTracerParticles.00006.hdf5  flowTracerParticles.00007.hdf5  flowTracerParticles.00008.hdf5  flowTracerParticles.00009.hdf5  flowTracerParticles.00010.hdf5  flowTracerParticles.00011.hdf5  flowTracerParticles.00012.hdf5  flowTracerParticles.00013.hdf5  flowTracerParticles.00014.hdf5  flowTracerParticles.00015.hdf5
tests/outputs/: flowField.0.xmf  flowWithComponentNames.xmf  flowWithMultipleComponents.xmf  flowWithParticles.0.xmf  meshWithExtrudedCells.xmf  multiFile.2DLine.0.xmf  multiFileFlowField.0.xmf  multiFileParticles.0.xmf  particleWithExtraFields.xmf  particlesDynamic3D.xmf  particlesOnly.0.xmf  particlesWithComponentsNames.0.xmf  singleFile.2DLine.0.xmf  steadyState.0.xmf  steadystate.0.xmf  swarm.static.mesh.0.xmf  swarmStaticMesh.0.xmf
